--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
-    <app>Loading...</app>
+    <app>Loading....</app>
 </body>
 </html>
